# pyrin-miner

./: .rustfmt.toml  Cargo.toml  README.md  build.rs  compile-cuda.sh
.github/workflows/: ci.yaml  deploy.yaml
integrations/hiveos/: build.sh  createmanifest.sh  h-config.sh  h-run.sh  h-stats.sh
integrations/windows/: create_bat.sh
plugins/: README.md
plugins/cuda/: Cargo.toml  README.md
plugins/cuda/kaspa-cuda-native/src/: kaspa-cuda.cu  xoshiro256starstar.c
plugins/cuda/pyrin-cuda-native/src/: blake3_compact.h  keccak-tiny-unrolled.c  keccak-tiny.c  keccak-tiny.h  pyrin-cuda.cu
plugins/cuda/resources/: kaspa-cuda-sm20.ptx  kaspa-cuda-sm30.ptx  kaspa-cuda-sm61.ptx  kaspa-cuda-sm75.ptx  kaspa-cuda-sm86.ptx  pyrin-cuda-sm30.ptx  pyrin-cuda-sm61.ptx  pyrin-cuda-sm75.ptx  pyrin-cuda-sm86.ptx
plugins/cuda/src/: cli.rs  lib.rs  worker.rs
plugins/opencl/: Cargo.toml  README.md
plugins/opencl/resources/: kaspa-opencl.cl
plugins/opencl/src/: cli.rs  lib.rs  worker.rs
proto/: messages.proto  p2p.proto  rpc.proto
src/: cli.rs  client.rs  keccakf1600_x86-64-osx.s  keccakf1600_x86-64.s  lib.rs  main.rs  miner.rs  pow.rs  pyipad_messages.rs  target.rs  watch.rs  xoshiro256starstar.rs
src/client/: grpc.rs  stratum.rs
src/client/stratum/: statum_codec.rs
src/pow/: hasher.rs  heavy_hash.rs  keccak.rs  xoshiro.rs
