[package]
name = "kaspacuda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kaspa-miner = {path = "../../"}
cust ="0.3"
log = "0.4"
rand = "0.8"
clap = { version = "3.0", features = ["color", "derive"]}
env_logger = "0.9"
nvml-wrapper = { git = "https://github.com/benrod3k/nvml-wrapper", branch = "495.29.05", optional = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
overclock = [ "nvml-wrapper" ]
